final push (please)

--- a/base.html
+++ b/base.html
@@ -14,7 +14,7 @@
   <nav>
     <ul>
       <li><a href="gejala-penyakit.html">Daftar Gejala dan Penyakit</a></li>
-      <li><a href="base.html">Diagnosa</a></li>
+      <li><a href="base.html" class="active">Diagnosa</a></li>
     </ul>
   </nav>
 
@@ -22,43 +22,64 @@
   <div class="gejala-group-container">
     <div class="gejala-kolom">
       <h3>Telinga</h3>
-      <div class="gejala" data-index="5">Nyeri telinga</div>
       <div class="gejala" data-index="19">Tuli</div>
-      <div class="gejala" data-index="31">Radang gendang telinga</div>
+      <div class="gejala" data-index="30">Radang gendang telinga</div>
       <div class="gejala" data-index="33">Telinga berdenging</div>
       <div class="gejala" data-index="34">Telinga terasa penuh</div>
-      <div class="gejala" data-index="35">Tubuh tak seimbang</div>
+      <div class="gejala" data-index="36">Tubuh tak seimbang</div>
     </div>
 
     <div class="gejala-kolom">
       <h3>Hidung</h3>
       <div class="gejala" data-index="4">Hidung tersumbat</div>
       <div class="gejala" data-index="7">Hidung meler</div>
+      <div class="gejala" data-index="10">Selaput lendir merah dan bengkak</div>
       <div class="gejala" data-index="14">Pendarahan hidung</div>
       <div class="gejala" data-index="24">Infeksi sinus</div>
-      <div class="gejala" data-index="26">Nyeri pinggir hidung</div>
     </div>
 
     <div class="gejala-kolom">
       <h3>Tenggorokan</h3>
-      <div class="gejala" data-index="2">Nyeri saat bicara atau menelan</div>
-      <div class="gejala" data-index="6">Nyeri tenggorokan</div>
+      <div class="gejala" data-index="3">Batuk</div>
       <div class="gejala" data-index="15">Suara serak</div>
-      <div class="gejala" data-index="22">Air liur menetes</div>
-      <div class="gejala" data-index="36">Tenggorokan gatal</div>
+      <div class="gejala" data-index="21">Air liur menetes</div>
+      <div class="gejala" data-index="29">Perubahan suara</div>
+      <div class="gejala" data-index="35">Tenggorokan gatal</div>
     </div>
 
     <div class="gejala-kolom">
       <h3>Umum</h3>
       <div class="gejala" data-index="0">Demam</div>
       <div class="gejala" data-index="1">Sakit kepala</div>
-      <div class="gejala" data-index="3">Batuk</div>
       <div class="gejala" data-index="8">Letih dan lesu</div>
       <div class="gejala" data-index="9">Mual dan muntah</div>
-      <div class="gejala" data-index="11">Ada benjolan di leher</div>
       <div class="gejala" data-index="17">Dahi sakit</div>
-      <div class="gejala" data-index="23">Berat badan turun</div>
-      <div class="gejala" data-index="29">Perubahan suara</div>
+      <div class="gejala" data-index="22">Berat badan turun</div>
+      <div class="gejala" data-index="23">Bunyi nafas abnormal</div>
+      <div class="gejala" data-index="28">Perubahan kulit</div>
+      <div class="gejala" data-index="31">Sakit gigi</div>
+      
+    </div>
+
+    <div class="gejala-kolom">
+      <h3>Nyeri</h3>
+      <div class="gejala" data-index="2">Nyeri saat bicara atau menelan</div>
+      <div class="gejala" data-index="5">Nyeri telinga</div>
+      <div class="gejala" data-index="6">Nyeri tenggorokan</div>
+      <div class="gejala" data-index="12">Nyeri leher</div>
+      <div class="gejala" data-index="25">Nyeri antar mata</div>
+      <div class="gejala" data-index="26">Nyeri pinggir hidung</div>
+      <div class="gejala" data-index="27">Nyeri wajah</div>
+    </div>
+
+    <div class="gejala-kolom">
+      <h3>Tidak Umum</h3>
+      <div class="gejala" data-index="11">Ada benjolan di leher</div>
+      <div class="gejala" data-index="13">Pembengkakan kelenjar getah bening</div>
+      <div class="gejala" data-index="16">Bola mata bergerak tanpa sadar</div>
+      <div class="gejala" data-index="18">Leher bengkak</div>
+      <div class="gejala" data-index="20">Ada yang tumbuh di mulut</div>
+      <div class="gejala" data-index="32">Serangan vertigo</div>
     </div>
   </div>
 
