--- a/gejala-penyakit.html
+++ b/gejala-penyakit.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="gejala-penyakit.html">Daftar Gejala dan Penyakit</a></li>
+            <li><a href="gejala-penyakit.html" class="active">Daftar Gejala dan Penyakit</a></li>
             <li><a href="base.html" class="back-button">Diagnosa</a></li>
         </ul>
     </nav>
